# api/swagger/swagger.yaml
@@ -15,130 +15,45 @@ basePath: /v1
 produces:
   - application/json
 paths:
-  /products:
-    get:
-      summary: Product Types
+  /postccrepo:
+    post:
+      summary: Add Project
       description: |
-        The Products endpoint returns information about the *Uber* products
-        offered at a given location. The response includes the display name
-        and other details about each product, and lists the products in the
-        proper display order.
+        Adds a Github project to the CodeConnect platform.
       parameters:
-        - name: latitude
-          in: query
-          description: Latitude component of location.
+        - name: ccrepos
+          in: body
+          description: add a github project to CodeConnect
           required: true
-          type: number
-          format: double
-        - name: longitude
-          in: query
-          description: Longitude component of location.
-          required: true
-          type: number
-          format: double
-      tags:
-        - Products
-      responses:
-        200:
-          description: An array of products
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Product'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-  /estimates/price:
-    get:
-      summary: Price Estimates
-      description: |
-        The Price Estimates endpoint returns an estimated price range
-        for each product offered at a given location. The price estimate is
-        provided as a formatted string with the full price range and the localized
-        currency symbol.<br><br>The response also includes low and high estimates,
-        and the [ISO 4217](http://en.wikipedia.org/wiki/ISO_4217) currency code for
-        situations requiring currency conversion. When surge is active for a particular
-        product, its surge_multiplier will be greater than 1, but the price estimate
-        already factors in this multiplier.
-      parameters:
-        - name: start_latitude
-          in: query
-          description: Latitude component of start location.
-          required: true
-          type: number
-          format: double
-        - name: start_longitude
-          in: query
-          description: Longitude component of start location.
-          required: true
-          type: number
-          format: double
-        - name: end_latitude
-          in: query
-          description: Latitude component of end location.
-          required: true
-          type: number
-          format: double
-        - name: end_longitude
-          in: query
-          description: Longitude component of end location.
-          required: true
-          type: number
-          format: double
+            $ref: '#/definitions/ccrepo'
       tags:
         - Estimates
       responses:
         200:
-          description: An array of price estimates by product
-          schema:
-            type: array
-            items:
-              $ref: '#/definitions/PriceEstimate'
-        default:
-          description: Unexpected error
-          schema:
-            $ref: '#/definitions/Error'
-  /estimates/time:
-    get:
-      summary: Time Estimates
-      description: The Time Estimates endpoint returns ETAs for all products offered at a given location, with the responses expressed as integers in seconds. We recommend that this endpoint be called every minute to provide the most accurate, up-to-date ETAs.
+          description: "done"
+
+  /posttask:
+    post:
+      summary: Post Task
+      description: You can add a task to a specific project to the Database
       parameters:
-        - name: start_latitude
-          in: query
-          description: Latitude component of start location.
+        - name: task
+          in: body
+          description: add a github project to CodeConnect
           required: true
-          type: number
-          format: double
-        - name: start_longitude
-          in: query
-          description: Longitude component of start location.
-          required: true
-          type: number
-          format: double
-        - name: customer_uuid
-          in: query
-          type: string
-          format: uuid
-          description: Unique customer identifier to be used for experience customization.
-        - name: product_id
-          in: query
-          type: string
-          description: Unique identifier representing a specific product for a given latitude & longitude.
-      tags:
-        - Estimates
+          schema:
+            $ref: '#/definitions/task'
       responses:
         200:
-          description: An array of products
+          description: Sends the task back which got added to the database
           schema:
-            type: array
-            items:
-              $ref: '#/definitions/Product'
+            $ref: '#/definitions/taskrequest'
         default:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
-  /me:
+  /auth/github:
     get:
       summary: User Profile
       description: The User Profile endpoint returns information about the Uber user that has authorized with the application.
@@ -180,6 +95,57 @@ paths:
           schema:
             $ref: '#/definitions/Error'
 definitions:
+  ccrepo:
+      type: object
+      properties:
+        name:
+          type: string
+          description: Name of the added project
+        project_id:
+          type: string
+          description: Unique identifier representing a specific project
+        description:
+          type: string
+          description: Description of the added repo
+        repourl:
+          type: string
+          description: The github repourl
+        tasks:
+          type: array
+          items:
+            $ref: '#/definitions/task'
+
+  task:
+    type: object
+    properties:
+      name:
+        type: string
+      description:
+        type: string
+      task_id:
+        type: integer
+
+  taskrequest:
+    type: object
+    properties:
+      ccrepo_id:
+        type: integer
+      taskwrapper:
+        $ref: '#/definitions/taskwrapper'
+      id:
+        type: integer
+        description: The github ID (user ID)
+
+  taskwrapper:
+    type: object
+    properties:
+      task:
+        type: string
+        description: just the task name
+      description:
+        type: string
+        description: taskdescription
+
   Product:
     type: object
     properties:
@@ -198,30 +164,6 @@ definitions:
       image:
         type: string
         description: Image URL representing the product.
-  PriceEstimate:
-    type: object
-    properties:
-      product_id:
-        type: string
-        description: Unique identifier representing a specific product for a given latitude & longitude. For example, uberX in San Francisco will have a different product_id than uberX in Los Angeles
-      currency_code:
-        type: string
-        description: "[ISO 4217](http://en.wikipedia.org/wiki/ISO_4217) currency code."
-      display_name:
-        type: string
-        description: Display name of product.
-      estimate:
-        type: string
-        description: Formatted string of estimate in local currency of the start location. Estimate could be a range, a single number (flat rate) or "Metered" for TAXI.
-      low_estimate:
-        type: number
-        description: Lower bound of the estimated price.
-      high_estimate:
-        type: number
-        description: Upper bound of the estimated price.
-      surge_multiplier:
-        type: number
-        description: Expected surge multiplier. Surge is active if surge_multiplier is greater than 1. Price estimate already factors in the surge multiplier.
   Profile:
     type: object
     properties:
