# controllers/task.js
@@ -5,16 +5,18 @@ var Task = Projectmodel.Task;
 var Belongsto = Projectmodel.Belongsto;
 
 exports.addTask = function(req, res) {
+    console.log("body");
+    console.log(req.body);
     var temp = {
-        name: req.body.tasks.task,
-        description: req.body.tasks.description
+        name: req.body.taskwrapper.task,
+        description: req.body.taskwrapper.description
     };
     new Task(temp).save(null, {method: 'insert'}).then(function(item) { //then answer
 
         new Belongsto({project_id: req.body.ccrepo_id, task_id: item.attributes.task_id}).save(null, { //save project in database
             method: 'insert'
         });
-        return(item.id);
+        return (item.id);
     }).then((task_id) => {
         temp.task_id = task_id;
         res.json(temp);
